# ecommerce-catalog-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/knowledge_base/: beauty_attribute_schema.json  beauty_brand_guide.md  beauty_reference_listings.json  electronics_attribute_schema.json  electronics_brand_guide.md  electronics_reference_listings.json  fashion_attribute_schema.json  fashion_brand_guide.md  fashion_reference_listings.json  home_attribute_schema.json  home_brand_guide.md  home_reference_listings.json
data/processed_data/: enriched_listings.json
data/raw/: sparse_listings.json
docs/: architecture.md
eval/: eval_dataset.json  generate_eval_dataset.py  run_ragas.py
load_test/: locustfile.py
scripts/: baseline_latency.py  generate_data.py  reindex_enriched.py
src/: api.py  app.py  config.py  logging_config.py
src/enrichment/: cache.py  enricher.py  pipeline.py  prompts.py  resilience.py  retriever.py  schemas.py
src/ingestion/: chunking.py  loaders.py
src/observability/: metrics.py
src/retrieval/: bm25_index.py  hybrid_search.py  vectorstore.py
tests/: conftest.py  test_edge_cases.py  test_enrichment.py  test_ingestion.py  test_retrieval.py
