[project]
name = "ecommerce-catalog-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=7.1.4",
    "chromadb>=1.5.9",
    "diskcache>=5.6.3",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "gradio>=6.19.0",
    "groq>=1.5.0",
    "pydantic-settings>=2.14.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "locust>=2.44.4",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
